[package]
name = "vachelin"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
dotenv = "0.15.0"
futures = "0.3.26"
hyper = "0.14.24"
mime = "0.3.16"
mongodb = { version = "2.3.1", features = ["zstd-compression", "snappy-compression", "zlib-compression"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["alloc"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace"] }
